--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,5 @@
 {
-  "svelteSortOrder": "options-styles-scripts-markup",
+  "svelteSortOrder": "scripts-markup-styles",
   "svelteStrictMode": true,
   "svelteBracketNewLine": false,
   "svelteAllowShorthand": false,
