--- a/package.json
+++ b/package.json
@@ -16,24 +16,25 @@
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/kit": "next",
     "@types/cookie": "^0.5.1",
-    "@typescript-eslint/eslint-plugin": "^5.27.0",
-    "@typescript-eslint/parser": "^5.27.0",
-    "autoprefixer": "^10.4.8",
+    "@typescript-eslint/eslint-plugin": "^5.42",
+    "@typescript-eslint/parser": "^5.42",
+    "autoprefixer": "^10.4",
     "eslint": "^8",
     "eslint-config-prettier": "^8",
+    "eslint-plugin-simple-import-sort": "^8",
     "eslint-plugin-svelte3": "^4",
-    "postcss": "^8.4.14",
+    "postcss": "^8.4.18",
     "prettier": "^2.7.1",
-    "prettier-plugin-svelte": "^2.7.0",
+    "prettier-plugin-svelte": "^2.8",
     "svelte": "^3",
     "svelte-check": "^2",
     "svelte-preprocess": "^4",
-    "tailwindcss": "^3.1.8",
-    "typescript": "~4.7.4"
+    "tailwindcss": "^3.2.1",
+    "typescript": "~4.8.4"
   },
   "type": "module",
   "dependencies": {
     "cookie": "^0.5.0",
-    "firebase": "^9.9.0"
+    "firebase": "^9.13.0"
   }
 }
