--- a/package.json
+++ b/package.json
@@ -1,40 +1,40 @@
 {
   "name": "konserter",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "scripts": {
-    "dev": "svelte-kit dev",
-    "build": "svelte-kit build",
-    "package": "svelte-kit package",
-    "preview": "svelte-kit preview",
-    "prepare": "svelte-kit sync",
-    "check": "svelte-check --tsconfig ./jsconfig.json",
-    "check:watch": "svelte-check --tsconfig ./jsconfig.json --watch",
-    "lint": "prettier --check --plugin-search-dir=. . && eslint --fix .",
-    "format": "prettier --write --plugin-search-dir=. ."
+    "dev": "vite dev",
+    "build": "vite build",
+    "preview": "vite preview",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "lint": "prettier --plugin-search-dir . --check . && eslint .",
+    "format": "prettier --plugin-search-dir . --write ."
   },
   "devDependencies": {
+    "@fontsource/fira-mono": "^4.5.0",
+    "@neoconfetti/svelte": "^1.0.0",
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/kit": "next",
     "@types/cookie": "^0.5.1",
-    "@typescript-eslint/eslint-plugin": "^5.42",
-    "@typescript-eslint/parser": "^5.42",
-    "autoprefixer": "^10.4",
-    "eslint": "^8",
-    "eslint-config-prettier": "^8",
-    "eslint-plugin-simple-import-sort": "^8",
-    "eslint-plugin-svelte3": "^4",
+    "@typescript-eslint/eslint-plugin": "^5.27.0",
+    "@typescript-eslint/parser": "^5.27.0",
+    "autoprefixer": "^10.4.13",
+    "eslint": "^8.16.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-svelte3": "^4.0.0",
     "postcss": "^8.4.18",
-    "prettier": "^2.7.1",
-    "prettier-plugin-svelte": "^2.8",
-    "svelte": "^3",
-    "svelte-check": "^2",
-    "svelte-preprocess": "^4",
+    "prettier": "^2.6.2",
+    "prettier-plugin-svelte": "^2.7.0",
+    "svelte": "^3.46.0",
+    "svelte-check": "^2.7.1",
+    "svelte-preprocess": "^4.10.7",
     "tailwindcss": "^3.2.1",
-    "typescript": "~4.8.4"
+    "tslib": "^2.3.1",
+    "typescript": "^4.7.4",
+    "vite": "^3.1.0"
   },
   "type": "module",
   "dependencies": {
-    "cookie": "^0.5.0",
-    "firebase": "^9.13.0"
+    "firebase": "^9.9.0"
   }
 }
