--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,16 @@
 {
 	"useTabs": true,
+	"tabWidth": 2,
 	"singleQuote": true,
 	"trailingComma": "none",
 	"printWidth": 180,
+	"semi": false,
 	"plugins": ["prettier-plugin-svelte"],
 	"pluginSearchDirs": ["."],
-	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
+	"svelteIndentScriptAndStyle": false,
+	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }],
+	"svelteSortOrder": "scripts-markup-styles",
+	"svelteStrictMode": false,
+	"svelteBracketNewLine": false,
+	"svelteAllowShorthand": false
 }
