--- a/package.json
+++ b/package.json
@@ -8,19 +8,20 @@
 		"format": "prettier -w ."
 	},
 	"devDependencies": {
-		"@sveltejs/vite-plugin-svelte": "^1.1.0",
+		"@sveltejs/vite-plugin-svelte": "^2.0.2",
 		"autoprefixer": "^10.4.13",
-		"postcss": "^8.4.18",
-		"prettier": "^2.7.1",
-		"prettier-plugin-svelte": "^2.8.0",
-		"svelte": "^3.52.0",
-		"tailwindcss": "^3.2.1",
-		"tslib": "^2.3.1",
-		"typescript": "^4.7.4",
-		"vite": "^3.2.0"
+		"postcss": "^8.4.21",
+		"prettier": "^2.8.4",
+		"prettier-plugin-svelte": "^2.9.0",
+		"svelte": "^3.55.1",
+		"tailwindcss": "^3.2.6",
+		"tslib": "^2.5.0",
+		"typescript": "^4.9.5",
+		"vite": "^4.1.1"
 	},
 	"type": "module",
 	"dependencies": {
-		"firebase": "^9.9.0"
+		"firebase": "^9.17.1",
+		"svelte-tiny-linked-charts": "^1.1.5"
 	}
 }
