--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
 		"resolveJsonModule": true,
 		"skipLibCheck": true,
 		"sourceMap": true,
-		"strict": true
-	}
+		"strict": true,
+		"outDir": "./dist"
+	},
+	"exclude": ["node_modules"]
 }
