--- a/package.json
+++ b/package.json
@@ -11,18 +11,17 @@
 	"devDependencies": {
 		"@sveltejs/vite-plugin-svelte": "^2.0.4",
 		"autoprefixer": "^10.4.14",
-		"postcss": "^8.4.22",
+		"postcss": "^8.4.23",
 		"prettier": "^2.8.7",
 		"prettier-plugin-svelte": "^2.10.0",
 		"svelte": "^3.58.0",
 		"tailwindcss": "^3.3.1",
 		"tslib": "^2.5.0",
 		"typescript": "^4.9.5",
-		"vite": "^4.2.1"
+		"vite": "^4.3.1"
 	},
 	"type": "module",
 	"dependencies": {
-		"firebase": "^9.19.1",
-		"svelte-tiny-linked-charts": "^1.1.5"
+		"firebase": "^9.20.0"
 	}
 }
