--- a/.prettierrc
+++ b/.prettierrc
@@ -9,7 +9,7 @@
 	"pluginSearchDirs": ["."],
 	"svelteIndentScriptAndStyle": false,
 	"overrides": [{"files": "*.svelte", "options": {"parser": "svelte"}}],
-	"svelteSortOrder": "scripts-markup-styles",
+	"svelteSortOrder": "options-scripts-markup-styles",
 	"svelteStrictMode": false,
 	"svelteBracketNewLine": false,
 	"svelteAllowShorthand": false,
