--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
 	},
 	"devDependencies": {
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
-		"autoprefixer": "^10.4.20",
+		"@tailwindcss/vite": "^4.0.0",
 		"postcss": "^8.5.1",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
-		"svelte": "^5.19.0",
-		"tailwindcss": "^3.4.17",
+		"svelte": "^5.19.2",
+		"tailwindcss": "^4.0.0",
 		"tslib": "^2.8.1",
 		"typescript": "^5.7.3",
-		"vite": "^6.0.9"
+		"vite": "^6.0.11"
 	},
 	"type": "module",
 	"dependencies": {
