--- a/package.json
+++ b/package.json
@@ -9,17 +9,17 @@
 	},
 	"devDependencies": {
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
-		"@tailwindcss/vite": "^4.1.3",
+		"@tailwindcss/vite": "^4.1.4",
 		"prettier": "^3.5.3",
 		"prettier-plugin-svelte": "^3.3.3",
-		"svelte": "^5.25.7",
-		"tailwindcss": "^4.1.3",
+		"svelte": "^5.28.2",
+		"tailwindcss": "^4.1.4",
 		"tslib": "^2.8.1",
 		"typescript": "^5.8.3",
-		"vite": "^6.2.5"
+		"vite": "6.2.6"
 	},
 	"type": "module",
 	"dependencies": {
-		"firebase": "^11.6.0"
+		"firebase": "^11.6.1"
 	}
 }
