--- a/package.json
+++ b/package.json
@@ -4,22 +4,23 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "vite build",
+		"serve": "vite preview",
 		"preview": "vite preview",
 		"format": "prettier -w ."
 	},
 	"devDependencies": {
-		"@sveltejs/vite-plugin-svelte": "^5.0.3",
-		"@tailwindcss/vite": "^4.1.5",
-		"prettier": "^3.5.3",
-		"prettier-plugin-svelte": "^3.3.3",
-		"svelte": "^5.28.2",
-		"tailwindcss": "^4.1.5",
+		"@sveltejs/vite-plugin-svelte": "^6.1.0",
+		"@tailwindcss/vite": "^4.1.11",
+		"prettier": "^3.6.2",
+		"prettier-plugin-svelte": "^3.4.0",
+		"svelte": "^5.37.2",
+		"tailwindcss": "^4.1.11",
 		"tslib": "^2.8.1",
-		"typescript": "^5.8.3",
-		"vite": "6.3.5"
+		"typescript": "^5.9.2",
+		"vite": "7.0.6"
 	},
 	"type": "module",
 	"dependencies": {
-		"firebase": "^11.6.1"
+		"firebase": "^12.0.0"
 	}
 }
