--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,11 +4,15 @@
 		"checkJs": false,
 		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
-		"resolveJsonModule": true,
 		"skipLibCheck": true,
 		"sourceMap": true,
 		"strict": true,
-		"outDir": "./dist"
+		"outDir": "./dist",
+		"module": "ESNext",
+		"moduleResolution": "Node",
+		"resolveJsonModule": true,
+		"target": "ESNext",
+		"noEmit": true,
 	},
 	"exclude": ["node_modules"]
 }
